Need to fix hot order and like post jumps

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -972,6 +972,9 @@ h5 {
 *
 * -------------------------------------------------------------------
 */
+/*::-webkit-scrollbar {
+    display: none;
+}*/
 .content {
 	margin-top: 100px;
 }
